Fix contact info at bottom and add text to links on mobile.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -198,3 +198,7 @@ h1, h2, h3, h4, h5, h6 {
 .contact-icon {
     text-align: left;
 }
+
+.black-text {
+    color: #000000;
+}
